--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@ ul.task-list li input[type="checkbox"] {
 </head>
 
 <body class="fullcontent quarto-light">
-
+<nav style="background-color: #f8f9fa; padding: 1em;">
+  <a href="index.html" style="margin-right: 20px;">About</a>
+  <a href="resume.html" style="margin-right: 20px;">Resume</a>
+  <a href="projects.html" style="margin-right: 20px;">Projects</a>
+  <a href="skills.html" style="margin-right: 20px;">Skills</a>
+  <a href="contact.html">Contact</a>
+</nav>
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
 
 <main class="content" id="quarto-document-content">
